Student work including forEach, Reduce, and Map

--- a/exercises/table_it/index.html
+++ b/exercises/table_it/index.html
@@ -11,20 +11,46 @@
 </head>
 
 <body>
-    <table class="table-bordered table-hover">
-        <tr>
-            <th>Stuff about STuff
-            </th>
+   <div class = "container">
+    <table class="table-bordered table-hover col-md-8">
+        <tr class = "warning">
+            <th>NAME</th>
+            <th>List of People</th>
+            <th>List of Things to Do</th>
+            <th>Addresses etc.</th>
+            <th>Stuff about Stuff</th>
         </tr>
 
         <tr>
-            <td>stuff1</td>
-            <td>stuff2</td>
+            <td>Bear</td>
+            <td>Bear's Friends</td>
+            <td>Play in the Forest</td>
+            <td>Honey Street</td>
+            <td>Bear likes to eat people</td>
         </tr>
         <tr>
-            <td>Stuff</td>
+            <td>Cow</td>
+            <td>Cow's Friends</td>
+            <td>Play in the poop field</td>
+            <td>Poop Field</td>
+            <td>Cow likes to eat Hay!</td>
+        </tr>
+        <tr>
+            <td>Duck</td>
+            <td>Duck's Friends</td>
+            <td>Play in the Lake</td>
+            <td>Water lake</td>
+            <td>Duck likes to Swim</td>
+        </tr>
+        <tr>
+            <td>Dog</td>
+            <td>Dog's Friends</td>
+            <td>Poop in House</td>
+            <td>People House</td>
+            <td>Dog eats his Puke!!</td>
         </tr>
     </table>
+    </div>
 </body>
 
 </html>
