Projects on Colossal, Reduce, and EO6

--- a/exercises/parsing_json/index.html
+++ b/exercises/parsing_json/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p id = "name"></p>
-     <p id = "name2"></p>
+     <div id = "name2"></div>
     <script src = "main.js"></script>
 </body>
 </html>
