--- a/projects/rpg_2/index.html
+++ b/projects/rpg_2/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Biggest Battle Fight Ever!</title>
+    <title>ROG</title>
+    <link type="text/css" rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <canvas id ="canvasmap" height = "1600px" width = "1600px"></canvas> 
-   <button onclick ="mapThisThing()">click</button>
-   <script src = "canvasmapping.js" type="text/javascript"></script>
+        <img class = "jungle" src ="jungle_terrain_q2.jpg"/>
+      <canvas class = "canvas" width="5950" height="4970"></canvas>
 </body>
 </html>
