axios and pulling APIs

--- a/exercises/to_do_list/index.html
+++ b/exercises/to_do_list/index.html
@@ -5,8 +5,14 @@
     <title></title>
 </head>
 <body>
-    
-    
+    <h2 id = "todoh1"></h2>
+    <p>add a todo</p>
+    <input type= text id = "newtodobox"><br>
+    <p>Optional Description</p>
+    <input type= text id = "newtododescription"><br>
+    <p>Optional Description</p>
+    <input type= text id = "newtododescription">
+    <button onclick = "newToDo()">submit</button>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src = "main.js"></script>
 </body>
