Intro stages to React interface.

--- a/exercises/to_do_list/index.html
+++ b/exercises/to_do_list/index.html
@@ -8,8 +8,8 @@
     <h2 id = "todoh1"></h2>
     <p>add a todo</p>
     <input type= text id = "newtodobox"><br>
-    <p>Optional Description</p>
-    <input type= text id = "newtododescription"><br>
+    <p>Optional Price</p>
+    <input type= number id = "newtodoprice"><br>
     <p>Optional Description</p>
     <input type= text id = "newtododescription">
     <button onclick = "newToDo()">submit</button>
